--- a/Hotel Management/packages.config
+++ b/Hotel Management/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="Guna.UI2.WinForms" version="2.0.4.7" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="9.0.10" targetFramework="net472" developmentDependency="true" />
 </packages>
